# memory-bear

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: memory_bear_prd.md  system_sync.md  weaviate_uuid_strategy.md
src/: main.py  server.py
src/database/: client.py  collections.py  utils.py
src/memory_bear/: __init__.py  config.py  main.py  server.py
src/memory_bear/database/: __init__.py  card_operations.py  client.py  collections.py  config.py  utils.py
src/memory_bear/templates/: study_note_template.md
src/memory_bear/tools/: __init__.py  create_cards_from_note.py  create_study_note.py  edit_study_note.py  find_best_match.py  get_cards.py  get_cards_overview.py  prompts.py  search_notes.py  update_card.py
src/memory_bear/utils/: files.py  markdown.py  search.py  templates.py
src/memory_bear/watcher/: __init__.py  file_watcher.py  sync.py
src/tests/watcher/: modified_test_note.md  sync_test_base.py  test_sync_workflow.py  test_workflow.py  watcher_test_base.py
src/tools/: __init__.py  create_study_note.py  exceptions.py  prompts.py  search_notes.py
src/utils/: filename_utils.py  logger_config.py  md_parser.py  populate_template.py  template_loader.py  write_study_note.py
src/watcher/: file_watcher.py  sync.py
tests/watcher/: modified_test_note.md  sync_test_base.py  test_note.md  test_sync_workflow.py  test_workflow.py  watcher_test_base.py
